Fixed horizontal scroll issue
Horizontal scrollBar was coming on home page
on screen sizes less than 365px, because of
media-event-blogs boxes being bigger than
the screen size.

Fixed issue by reducing their sizes on
screen sizes less than 365px.

--- a/client/stylesheets/components/home/media-events-blog.scss
+++ b/client/stylesheets/components/home/media-events-blog.scss
@@ -91,3 +91,17 @@
     }
   }
 }
+
+@media screen and (max-width: 365px) {
+  .media-events-blog {
+    .img-holder {
+      width: 300px;
+      height: 200px;
+    }
+
+    .iframe-holder {
+      width: 300px;
+      height: 200px;
+    }
+  }
+}
